
set netrexx_java=-Dnrx.compiler="ecj -source 1.6 -target 1.6"

The nrx.compiler property can also be set directly in Ant builds or via the Ant project property "ant.netrexxc.javacompiler".


______________________________________________

NetRexx 3.03 [May 23th, 2014]

Changes are:

- a jsr223 engine for NetRexx that enables interoperation with JavaScript (and AppleScript on MacOSX) - documented in the Programming Guide
- Java 8 compatibility:
       	 - a fix for the class parser to enable to recognize new bytecode instructions introduced in Java 7 but now used in Java 8
         - the ecj (Eclipse Java Compiler) has been upgraded to 4.4RC1, corresponding to v20140514-2138, 3.10.0, to enable compiles under Java 8
	 - a fix for issue NETREXX-108, adding default and static methods in interfaces that Java 8 allows
- improvements to UTF-8 source code compatibility (NETREXX-6)
- removed hardcoded locations for finding classes.jar on MacOSX and z/OS. MacOSX uses Sun/Oracle conventions now. z/OS support was outdated.
- documentation additions and improvements
- a fix for issue NETREXX-7, message change
- a fix for issue NETREXX-58, add a serialVersionID to class Rexx
- a fix for issue NETREXX-68, datatype(S) with euro or dollar symbol
- a fix for issue NETREXX-83, orphan file and missing entries in Diag.nrx
- a fix for issue NETREXX-85, unqualified properties statement
- a fix for issue NETREXX-107, NetRexx documentation naming convention
- a fix for issue NETREXX-108, static and default methods in interfaces
- the compiler will now run again with its classes loaded from the filesystem instead of from a jar file
- a change to the windows command scripts to automatically add the NetRexxF.jar to the classpath environment variable, and to default
  to the ecj compiler so its classes are found.


______________________________________________

NetRexx 3.02 [June 25th, 2013]

Changes are:
