@@ -3,7 +3,7 @@
 <project name="NetRexx" basedir="." default="default">
 
   <!-- <property name="version"      value="3.03"/> -->
-  <property name="PACKAGE_NAME" value="NetRexx-3.04RC2.zip"/>
+  <property name="PACKAGE_NAME" value="NetRexx-3.04GA.zip"/>
   <property name="examples"     value="../examples"  description="directory location to find the NetRexx examples" />
   
   <property name="build.sysclasspath"                         value="ignore"/>
