@@ -142,7 +142,7 @@ Note that properties can be set in other parts of the ant xml file and
 used in the ant script.
 This script yields the following output:
 \bash[stdout]
-ant -f antscript.xml
+java -cp $CLASSPATH:../../ant/ant-launcher.jar:../../ant/ant.jar org.apache.tools.ant.launch.Launcher -f antscript.xml
 \END
 
 The task may use the BSF scripting manager or the JSR 223 manager that
