@@ -35,6 +35,12 @@ set netrexx_java=-Dnrx.compiler="ecj -source 1.6 -target 1.6"
 
 The nrx.compiler property can also be set directly in Ant builds or via the Ant project property "ant.netrexxc.javacompiler".
 
+- a fix for NETREXX-134 -time output references correct compiler name
+- a fix for a transient NullPointer exception when looking for compilers
+- a fix for NETREXX-131 : add RuntimeConstants to enable building of the translator using ecj again
+
+
+The Pipes for NetRexx documentation is not ready yet, but previews will be available from the NetRexx website.
 
 ______________________________________________
 
